# pomodoro

./: CMakeLists.txt  README.md  a.out  daemon.h  db_con.c  db_con.h  description.h  main.c  new.csv  output_file  path.txt  plots.h  pomodoro  pomodoro.db  settings.h  setup.sh  time.h  timer.h
files/: data.csv  path.txt
